# blogify

./: README.md  docker-compose.yml
client/: .env  index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src/constants/: article.ts
client/src/hooks/: use-article-form.ts  use-copy-to-clipboard.ts  use-plan-limits.ts  use-register-form.ts  use-toggle-visibility.ts  use-workspace-permissions.ts  useClickOutside.tsx  useNotificationsSocket.tsx
client/src/pages/: landing.tsx  pricing.tsx
client/src/providers/: AuthProvider.tsx  NotificationsProvider.tsx
client/src/routes/: admin-routes.tsx  auth-routes.tsx  error-routes.tsx  public-routes.tsx  user-routes.tsx
client/src/styles/: animated-rocket.css  background.css  cta-background.css
client/src/types/: api-key.ts  api.ts  article.ts  category.ts  credentials.ts  kanban.ts  notification.ts  plan.ts  session.ts  subscription.ts  user.ts  workbench.ts
server/: .gitignore  IMPLEMENT_DOCKERIZING.md  README.md  index.js  package.json  pnpm-lock.yaml  test-sharp.js
server/astro-project/: astro.config.mjs  package.json  pnpm-lock.yaml
server/public/: index.html
server/public/_astro/: articles.Dfwqc4BG.css
server/tests/: jest.config.js
worker/: Cargo.toml
worker/migrations/: 20240501000000_initial_schema.sql
worker/src/: main.rs
worker/src/config/: database.rs  redis.rs
worker/src/events/: event.rs  mod.rs  payloads.rs
worker/src/handlers/: ai.rs  analytics.rs  article_read.rs  core.rs  emails.rs  mod.rs  notifications.rs
worker/src/queue/: consumer.rs
(+448 files in other folders)
