[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }